# copylibs

./: README.md  pyproject.toml
copylibs/: copylibs.py
